--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur soluta optio dolor numquam repudiandae
+            Lorem ipsum, ok dolor sit amet consectetur adipisicing elit. Consectetur soluta optio dolor numquam repudiandae
             praesentium, error nam laudantium ratione accusantium. Similique non cum optio doloremque, doloribus esse
             iusto quam. Dolore?
         </p>
