--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <p>
-            Lorem ipsum, ok dolor sit amet consectetur adipisicing elit. Consectetur soluta optio dolor numquam repudiandae
-            praesentium, error nam laudantium ratione accusantium. Similique non cum optio doloremque, doloribus esse
-            iusto quam. Dolore?
-        </p>
-        
+        <p>testing git push old file</p>
     </body>
 </html>
