--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     </head>
     <body>
         <h1>testing old</h1>
-        <p>testing git push old file</p>
-        <p>testing git push old file</p>
-        <p>testing git push old file</p>
+        <p>branch testing</p>
     </body>
 </html>
